--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,141 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('https://www.pixelstalk.net/wp-content/uploads/2016/07/Weather-Image-Download-Free-768x480.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  margin: 0%;
+  min-height: 100vh;
 }
-
+.roditel {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+footer {
+  background-color: rgba(21, 0, 155, 0.75);
+  color: white;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+header {
+  background-color: rgba(21, 0, 155, 0.75);
+  color: white;
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.buttonClick {
+  color: black;
+  background: white; /* фон кнопки */
+  outline: none;
+  width: 253px;
+  -webkit-animation-name: button; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 10s; /* Safari 4.0 - 8.0 */
+  animation-name: button;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+@-webkit-keyframes button {
+  0% {
+    background-color: red;
+    left: 0px;
+    top: 0px;
+  }
+  25% {
+    background-color: yellow;
+    left: 200px;
+    top: 0px;
+  }
+  50% {
+    background-color: blue;
+    left: 200px;
+    top: 200px;
+  }
+  75% {
+    background-color: green;
+    left: 0px;
+    top: 200px;
+  }
+  100% {
+    background-color: red;
+    left: 0px;
+    top: 0px;
+  }
+}
+
+/* Standard syntax */
+@keyframes button {
+  0% {
+    background-color: red;
+    left: 0px;
+    top: 0px;
+  }
+  25% {
+    background-color: yellow;
+    left: 200px;
+    top: 0px;
+  }
+  50% {
+    background-color: blue;
+    left: 200px;
+    top: 200px;
+  }
+  75% {
+    background-color: green;
+    left: 0px;
+    top: 200px;
+  }
+  100% {
+    background-color: red;
+    left: 0px;
+    top: 0px;
+  }
+}
+.inputClass {
+  text-align: center;
+  margin-top: 5%;
+  width: 250px;
+}
+.pClass {
+  color: white;
+  font-size: 150%;
+}
+
+.selectClass {
+  text-align-last: center;
+  text-align: center;
+  color: black;
+  border: none;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+  -webkit-appearance: button;
+  appearance: button;
+  width: 253px;
+}
+.container {
+  display: flex;
+  justify-content: center;
+}
+.divStyle {
+  border: 3px solid #fff;
+  border-radius: 5%;
+}
+.buttonDisabled {
+  color: black;
+  background: black; /* фон кнопки */
+  outline: none;
+  width: 253px;
 }
